--- a/index.html
+++ b/index.html
@@ -15,29 +15,25 @@
   </header>
 
   <section class="projects-section">
+
+ 
     <div class="project-card fade-up">
-      <h2>🧠 AI Chatbot</h2>
-      <p>Conversational bot powered by NLP</p>
-      <a href="#" target="_blank">Try Chatbot</a>
+      <h2>Self distruct countdown</h2>
+      <p>if time end up  self distruct message popup</p>
+      <a href="#" target="_blank">Try once</a>
     </div>
 
+ 
     <div class="project-card fade-up">
-      <h2>📷 Image Classifier</h2>
-      <p>Real-time image recognition using TensorFlow.js</p>
-      <a href="#" target="_blank">Try Classifier</a>
+      <h2>countdown timer</h2>
+      <p>New year countdown 2026 </p>
+      <a href="#" target="_blank">Happy New Year</a>
     </div>
 
-    <div class="project-card fade-up">
-      <h2>🎨 AI Art Generator</h2>
-      <p>Transform text into artwork using GANs</p>
-      <a href="#" target="_blank">Generate Art</a>
-    </div>
 
-    <div class="project-card fade-up">
-      <h2>📊 Predictive Analysis</h2>
-      <p>Forecast trends using AI & Machine Learning</p>
-      <a href="#" target="_blank">View Demo</a>
-    </div>
+
+
+    
   </section>
 
   <footer>
