--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     <div class="project-card fade-up">
       <h2>Self distruct countdown</h2>
       <p>if time end up  self distruct message popup</p>
-      <a href="#" target="_blank">Try once</a>
+      <a href="https://anmolchandel944.github.io/self-destruct-countdown/" target="_blank">Try once</a>
     </div>
 
  
     <div class="project-card fade-up">
       <h2>countdown timer</h2>
       <p>New year countdown 2026 </p>
-      <a href="#" target="_blank">Happy New Year</a>
+      <a href="https://anmolchandel944.github.io/countdown-timer/" target="_blank">Happy New Year</a>
     </div>
 
 
