--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
 
  
     <div class="project-card fade-up">
+      <h2>  Rubik cube Game</h2>
+      <p> Experience the power of 3D logic! Rotate, twist, and challenge your mind with this CSS-powered Rubik’s Cube simulation — a blend of code, creativity, and curiosit , after open or reload the web new puzzel will be show to solve</p>
+      <a href=" https://anmolchandel944.github.io/rubik-game-/ " target="_blank"> Play now</a>
+    </div>
+
+    
+    <div class="project-card fade-up">
       <h2>Self distruct countdown</h2>
       <p>if time end up  self distruct message popup</p>
       <a href="https://anmolchandel944.github.io/self-destruct-countdown/" target="_blank">Try once</a>
@@ -41,3 +48,4 @@
   </footer>
 </body>
 </html>
+
